syntax = "proto3";

package inventory;

option go_package = "./proto";

service InventoryService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProductByID (GetProductRequest) returns (ProductResponse);
  rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
  rpc DeleteProduct (DeleteProductRequest) returns (Empty);
  rpc ListProducts (ListProductsRequest) returns (ListProductsResponse);
  rpc AdjustStock (AdjustStockRequest) returns (ProductResponse); // âœ… NEW
}

message CreateProductRequest {
  string name = 1;
  string category = 2;
  int32 stock = 3;
  double price = 4;
}

message GetProductRequest {
  int32 id = 1;
}

message UpdateProductRequest {
  int32 id = 1;
  string name = 2;
  string category = 3;
  int32 stock = 4;
  double price = 5;
}

message DeleteProductRequest {
  int32 id = 1;
}

message ListProductsRequest {
  // Empty for now; can later add filters or pagination
}

message AdjustStockRequest {
  int32 product_id = 1;
  int32 delta = 2; // can be negative (to reduce stock) or positive (to increase)
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string category = 3;
  int32 stock = 4;
  double price = 5;
}

message ListProductsResponse {
  repeated ProductResponse products = 1;
}

message Empty {}
